--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ project(":desktop") {
 
     dependencies {
         implementation project(":core")
+        implementation 'commons-cli:commons-cli:1.5.0'
         api "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         
